# kj-bridgedeck

./: .env.example  .gitignore  BRIDGEDECK_SPEC.md  BUILD_STATE.md  CLAUDE.md  KJ_RULEZ.md  README.md  render.yaml
api/: .dockerignore  Dockerfile  config.py  dependencies.py  main.py  middleware.py  requirements.txt
api/models/: responses.py
api/routes/: action_queue.py  auto_approve.py  bridge.py  cost.py  handoffs.py  health.py  history.py  notes.py  projects.py  sessions.py  settings.py  stats.py
api/services/: brain_client.py  history_logger.py  settings_cache.py  (+2 more)
bridge-core/: README.md  pyproject.toml
bridge-core/bridge_core/: __init__.py  actions.py  chat.py  claude_stream.py  context.py  directives.py  external_billing.py  intent.py  models.py  prompts.py  rate_limiter.py  utils.py  voice.py
bridge-core/tests/: conftest.py  test_chat.py  test_directives.py  test_intent.py
bridge-ui/: package.json  wrangler.toml
docs/: ADMIN_SETTINGS.md  DEPLOYMENT.md  EMPIRE_COST_LOGGING_BUILD_CARD.md  HISTORY_LOG.md  POST_DEPLOY.md  PROMPT_CACHING_BUILD_CARD.md
install/: brain_flush.ps1  install_piper.ps1  install_watcher.ps1
kje-cost-logger/: README.md  setup.py
shared/: README.md  contracts.py  contracts.ts
supabase/: schema.sql
watcher/: __init__.py  auto_approve.py  brain_client.py  config.py  cost_calculator.py  history_logger.py  jsonl_parser.py  local_api.py  main.py  process_detector.py  requirements.txt  state.py  status_resolver.py  summarizer.py  supabase_client.py  tmux_controller.py  version_info.txt  watcher.spec  windows_controller.py
(+16 files in other folders)
