[project]
name = "bridge-core"
version = "0.1.0"
description = "KJ BridgeDeck Bridge core — chat, voice, action executor"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "httpx>=0.27.2",
    "supabase>=2.9.1",
    "pydantic>=2.9.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
